Design fix on mobile devices

--- a/public/main/css/main.client.css
+++ b/public/main/css/main.client.css
@@ -19,6 +19,14 @@ body {
   font-family: 'Titillium Web', sans-serif;
 }
 
+.fill{
+  height: 100vh;
+}
+
+.wrap{
+  height: 100%;
+}
+
 a {
   text-decoration: none;
   color: #2196F3;
